--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -155,6 +155,15 @@ button {
   }
 }
 
+.message {
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
+  width: fit-content;
+  max-width: 90%;
+  padding: 2px 8px;
+}
+
 .chat-page main {
   flex: 1;
   display: flex;
@@ -163,6 +172,7 @@ button {
   overflow: auto;
   gap: 10px;
   padding: 10px;
+
   .warn {
     flex: 1;
     display: grid;
@@ -171,32 +181,40 @@ button {
   }
 
   .msg-user {
+    @extend .message;
     background: #f99417;
     align-self: end;
-    padding: 4px 8px;
     border-radius: 7px 7px 0 7px;
     color: white;
   }
 
   .msg-other {
     display: flex;
-    align-items: center;
+    align-items: start;
     gap: 5px;
     color: black;
 
+    img {
+      width: 40px;
+      border-radius: 50%;
+    }
+
     div {
       display: flex;
-      align-items: center;
-      gap: 5px;
-
-      img {
-        width: 40px;
-        border-radius: 50%;
-      }
+      flex-direction: column;
+      gap: 2px;
+      width: 100%;
 
       span {
         font-weight: bold;
         white-space: nowrap;
+        color: rgb(84, 84, 84);
+      }
+
+      .msg-text {
+        @extend .message;
+        background: rgb(222, 221, 221);
+        border-radius: 0 7px 7px 7px;
       }
     }
   }
